--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     <title>Ozan KARA Landing Page</title>
 </head>
 <body>
+    <div class="first_container">
+
     <div class="nav_bar">
         <h1>Header Logo</h1>
         <a class="nav_bar_link" href="#">header_link_one</a>
         <a class="nav_bar_link" href="#">header_link_two</a>
         <a class="nav_bar_link" href="#">header_link_three</a>
     </div>
-    <div class="first_container">
-
-        First Container
+    <div class="header_content">
+        <div class="header_content_left">
+            <h1>This website is awesome</h1>
+            <p>The websites content about everything</p>
+            <button class="header_button">Signr Up</button>
+        </div>
+        <div class="header_content_right">
+            <img src="alex-houque-y_O4UcN8hUo-unsplash.jpg">
+        </div>
+    </div>
     </div>    
     <div class="second_container">
         First Container
