first container work

--- a/index.html
+++ b/index.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Ozan KARA Landing Page</title>
 </head>
 <body>
     <div class="first_container">
+        <div class="nav_bar">
+            <div class="logo">
+                <h2>Header Logo</h1>
+            </div>
+            <div class="nav_links">
+                <a class="nav_bar_link" href="#">header link one</a>
+                <a class="nav_bar_link" href="#">header link two</a>
+                <a class="nav_bar_link" href="#">header link three</a>
+            </div>
+        </div>
+        <div class="header_content">
+            <div class="header_content_left">
+                <h1 id="header_left_title">This website is awesome</h1>
+                <p>The websites content about everything. I can write anything  here. I can use
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Quis voluptate
 
-    <div class="nav_bar">
-        <h1>Header Logo</h1>
-        <a class="nav_bar_link" href="#">header_link_one</a>
-        <a class="nav_bar_link" href="#">header_link_two</a>
-        <a class="nav_bar_link" href="#">header_link_three</a>
-    </div>
-    <div class="header_content">
-        <div class="header_content_left">
-            <h1>This website is awesome</h1>
-            <p>The websites content about everything</p>
-            <button class="header_button">Signr Up</button>
+                </p>
+                <button class="header_button">Sign Up</button>
+            </div>
+            <div class="header_content_right">
+                <img src="alex-houque-y_O4UcN8hUo-unsplash.jpg">
+            </div>
         </div>
-        <div class="header_content_right">
-            <img src="alex-houque-y_O4UcN8hUo-unsplash.jpg">
-        </div>
-    </div>
     </div>    
     <div class="second_container">
         First Container
