--- a/index.html
+++ b/index.html
@@ -35,13 +35,58 @@
         </div>
     </div>    
     <div class="second_container">
-        First Container
+        <div class="second_content_header">
+            Some random information.
+        </div>
+        <div class="second_content_boxes">
+            <div class="box_info">
+                <div class="box">
+
+                </div>
+                <div class="info">
+                    first box Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ducimus totam aliquid minus ullam mollitia quam provident, voluptas porro quasi. Quod dignissimos sit iusto, magnam nulla minima eum saepe molestiae.
+                </div>
+
+            </div>
+            <div class="box_info">
+                <div class="box">
+
+                </div>
+                <div class="info">
+                    second box Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laudantium sequi cumque sed accusamus ipsa rerum commodi culpa cum labore dicta recusandae totam quibusdam aliquam eveniet nam, exercitationem repellendus unde?
+                </div>
+
+            </div>
+
+            <div class="box_info">
+                <div class="box">
+                </div>
+                <div class="info">
+                    third box Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum a sint culpa et repellendus recusandae possimus debitis minima ut, suscipit accusantium! Eum, necessitatibus voluptate. Odio odit numquam doloremque quis doloribus.
+                </div>
+
+            </div>
+            <div class="box_info">
+                <div class="box">
+                </div>
+                <div class="info">
+                    fourth box Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vel ipsam facere! Nesciunt esse eos, id sequi sed ipsam temporibus vitae numquam tempora? Beatae, voluptatibus necessitatibus voluptatum ut iure ipsa!
+                </div>
+
+            </div>
+
+        </div>
     </div>
     <div class="third_container">
-        First Container
+        <div class="third_content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam id, non, facilis voluptas nobis esse excepturi eum dignissimos, obcaecati sint alias aspernatur itaque ipsa omnis facere temporibus. Fugit, vitae sint.
+        </div>
+        <div class="third_sign">
+            - Ozan KARA
+        </div>
     </div>
     <div class="fourth_container">
-        First Container
+        Fourth Container
     </div>
     <div class="footer">
         Copyright The Odin Project
