--- a/index.html
+++ b/index.html
@@ -78,15 +78,31 @@
         </div>
     </div>
     <div class="third_container">
-        <div class="third_content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam id, non, facilis voluptas nobis esse excepturi eum dignissimos, obcaecati sint alias aspernatur itaque ipsa omnis facere temporibus. Fugit, vitae sint.
-        </div>
-        <div class="third_sign">
-            - Ozan KARA
+        <div class="sub_third_container">
+            <div class="third_content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam id, non, facilis voluptas nobis esse excepturi eum dignissimos, obcaecati sint alias aspernatur itaque ipsa omnis facere temporibus. Fugit, vitae sint.
+            </div>
+            <div class="third_sign">
+                - Ozan KARA
+            </div>
         </div>
     </div>
     <div class="fourth_container">
-        Fourth Container
+        <div class="fourth_container_box">
+
+            <div class="fourth_container_box_left">
+                <div class="fourth_container_box_left_title">
+                    Call to action It's time!
+                </div>
+                <div class="fourth_container_box_left_content">
+                    Sign up for our product by clicking that button right over there!
+                </div>
+                
+            </div>
+            <button class="fourth_container_box_right">
+                Sign up
+            </button>
+        </div>
     </div>
     <div class="footer">
         Copyright The Odin Project
