--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <div class="footer">
-        Copyright The Odin Project
+        Copyright @ The Odin Project Ozan KARA
     </div>    
 </body>
 </body>
